[tool.poetry]
name = "neurograph"
version = "0.1.0"
description = "Модульная нейросимволическая система для создания ресурсоэффективного персонального ассистента"
authors = ["RAVEN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
pydantic = "^2.4.0"
loguru = "^0.7.0"
networkx = "^3.1"
numpy = "^1.24.0"
scipy = "^1.11.0"
spacy = "^3.6.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pylint = "^2.17.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"